<resources>
    <string name="app_name">Personal Recipe Store</string>
    <string name="action_settings">Settings</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="title">Title</string>
    <string name="ingredient">Ingredient</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="directions">Directions</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="remove">Remove</string>
    <string name="recipes">My Recipes</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create">Create Account</string>
    <string name="image">Image</string>
    <string name="add_image">Select Image</string>
    <string name="log_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="sync">Sync Recipes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
