<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.josep.recipesapp.MainActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_recipe"
        android:orderInCategory="100"
        android:title="@string/create_recipe"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_recipes"
        android:orderInCategory="100"
        android:title="@string/recipes"
        app:showAsAction="never" />
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_account"
        android:orderInCategory="100"
        android:title="@string/create"
        app:showAsAction="never" />
</menu>
