<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/ingredient"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--https://www.tutorialspoint.com/android/android_imagebutton_control.htm-->
    <ImageView
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        android:onClick="removeIngredient"
        android:src="@drawable/ic_remove_circle_outline_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAmount"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

</android.support.constraint.ConstraintLayout>